# SpaceGameProject

./: .clang-format  .gitignore  CMakeLists.txt  build_and_push.sh  webp2png.sh
SpaceGameProject/: CMakeLists.txt  build_and_push.sh
SpaceGameProject/assets/shader/: default.frag  default.vert  iso.frag  iso.vert
SpaceGameProject/build-linux/: CMakeCache.txt  Makefile  MyGame  cmake_install.cmake  compile_commands.json
SpaceGameProject/build-linux/assets/shader/: default.frag  default.vert  iso.vert
SpaceGameProject/include/glad/include/glad/: glad.h
SpaceGameProject/include/glad/src/: glad.c
SpaceGameProject/src/: main.cpp  utils.h
SpaceGameProject/src/game/: game.cpp  game.h
SpaceGameProject/src/game/tile/: tile.h
SpaceGameProject/src/renderer/: renderer.cpp  renderer.h
SpaceGameProject/src/renderer/shader/: shader.h
SpaceGameProject/src/renderer/texture/: texture.h
SpaceGameProject/src/utils/: utils.h
assets/models/: Debug Cube.gltf
assets/shader/: color.frag  color.vert  image.vert  mask.frag  mask.vert  mesh.frag  mesh.vert  tile.frag  tile.vert  upscale.frag
build-linux/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  MyGame  cmake_install.cmake  compile_commands.json
build-linux/assets/shader/: color.vert  mesh.frag  tile.frag  tile.vert
build-win/: .ninja_deps  .ninja_log  CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  build.ninja  cmake_install.cmake  compile_commands.json
build-win/CPM_modules/: FindFastSIMD.cmake
build-windows/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-windows/assets/shader/: mesh.frag  mesh.vert  upscale.frag
src/: main.cpp
src/game/: game.cpp  game.h
src/game/ECS/: ecs.cpp  ecs.h
src/game/world/: tile.h  worldgen.cpp  worldgen.h
src/renderer/: renderer.cpp  renderer.h
src/renderer/shader/: shader.h
src/renderer/texture/: texture.h
src/utils/: utils.cpp  utils.h
